@@ -1,3 +1,5 @@
+* Fix regression in compileSelector() and make Patterns.attribute use a non-greedy `.*?`. [jddalton]
+
 * Ensure `:enabled` and `:disabled` dynamic pseudos only match elements with a `type` property to avoid false positives on LABEL elements. [jddalton]
 
 * Rename `base` to `doc`, `doc` variable is updated for each selection so the in-line tests all references the ownerDocument of the scrutinized elements. [Diego Perini, kangax]
